src/Parser.output
State 25 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 125 conflicts: 4 reduce/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce, 2 reduce/reduce
State 192 conflicts: 1 shift/reduce
State 195 conflicts: 1 shift/reduce
State 196 conflicts: 1 shift/reduce
State 199 conflicts: 1 shift/reduce
State 200 conflicts: 1 shift/reduce
State 201 conflicts: 1 shift/reduce
State 202 conflicts: 1 shift/reduce
State 203 conflicts: 1 shift/reduce
State 204 conflicts: 1 shift/reduce
State 205 conflicts: 1 shift/reduce
State 206 conflicts: 1 shift/reduce
State 207 conflicts: 1 shift/reduce
State 208 conflicts: 1 shift/reduce
State 209 conflicts: 1 shift/reduce
State 210 conflicts: 1 shift/reduce
State 211 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 213 conflicts: 1 shift/reduce
State 214 conflicts: 1 shift/reduce
State 215 conflicts: 1 shift/reduce
State 216 conflicts: 1 shift/reduce
State 217 conflicts: 1 shift/reduce
State 218 conflicts: 1 shift/reduce
State 219 conflicts: 1 shift/reduce
State 220 conflicts: 1 shift/reduce
State 221 conflicts: 1 shift/reduce
State 222 conflicts: 1 shift/reduce
State 223 conflicts: 1 shift/reduce
State 224 conflicts: 1 shift/reduce
State 225 conflicts: 1 shift/reduce
State 254 conflicts: 1 shift/reduce
State 276 conflicts: 1 shift/reduce
State 293 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Decls

    2 Decls: Decls Decl
    3      | ε

    4 Decl: FuncDecl
    5     | VarDecl
    6     | TypeDecl
    7     | TypedefDecl

    8 TypedefDecl: TYPEDEF VarType IDENTIFIER SEMICOLON
    9            | TYPEDEF STRUCT IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   10            | TYPEDEF UNION IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON

   11 FuncDecl: VarType IDENTIFIER LPARENTHESES ParamList RPARENTHESES SEMICOLON
   12         | VarType IDENTIFIER LPARENTHESES ParamList RPARENTHESES FuncBody

   13 FuncBody: LBRACE Stmts RBRACE

   14 VarDecl: VarType VarList SEMICOLON

   15 TypeDecl: _VarType SEMICOLON

   16 VarType: _VarType
   17        | CONST _VarType

   18 _VarType: BuiltinType
   19         | STRUCT IDENTIFIER LBRACE FieldDecls RBRACE
   20         | STRUCT IDENTIFIER
   21         | UNION IDENTIFIER LBRACE FieldDecls RBRACE
   22         | UNION IDENTIFIER
   23         | ENUM IDENTIFIER LBRACE EnumList RBRACE
   24         | ENUM IDENTIFIER
   25         | _VarType ASTERISK
   26         | IDENTIFIER

   27 VarList: VarList COMMA VarInit
   28        | VarInit
   29        | ε

   30 VarInit: IDENTIFIER ArrayBoundList
   31        | IDENTIFIER ArrayBoundList ASSIGN Expr
   32        | IDENTIFIER ArrayBoundList ASSIGN LBRACE InitList RBRACE
   33        | IDENTIFIER ArrayBoundList ASSIGN LBRACE RBRACE

   34 InitList: InitList COMMA InitItem
   35         | InitItem

   36 InitItem: Expr
   37         | LBRACE InitList RBRACE

   38 ArrayBoundList: ArrayBoundList ArrayBound
   39               | ArrayBound
   40               | ε

   41 ArrayBound: LBRACKET INTEGER RBRACKET
   42           | LBRACKET RBRACKET

   43 ParamList: ParamList COMMA Param
   44          | ParamList COMMA ELLIPSES
   45          | Param
   46          | ELLIPSES
   47          | ε

   48 Param: VarType IDENTIFIER
   49      | VarType

   50 BuiltinType: CHAR
   51            | SHORT
   52            | INT
   53            | LONG
   54            | UNSIGNED
   55            | UNSIGNED CHAR
   56            | UNSIGNED SHORT
   57            | UNSIGNED INT
   58            | UNSIGNED LONG
   59            | FLOAT
   60            | DOUBLE
   61            | BOOL
   62            | VOID

   63 FieldDecls: FieldDecls FieldDecl
   64           | ε

   65 FieldDecl: VarType MemberList SEMICOLON
   66          | SEMICOLON

   67 MemberList: MemberList COMMA IDENTIFIER
   68           | IDENTIFIER
   69           | ε

   70 EnumList: EnumList COMMA Enum
   71         | Enum
   72         | ε

   73 Enum: IDENTIFIER
   74     | IDENTIFIER ASSIGN INTEGER

   75 Stmts: Stmts Stmt
   76      | ε

   77 Stmt: Expr SEMICOLON
   78     | IfStmt
   79     | SwitchStmt
   80     | ForStmt
   81     | DoStmt
   82     | WhileStmt
   83     | ContinueStmt
   84     | BreakStmt
   85     | ReturnStmt
   86     | Block
   87     | TypeDecl
   88     | VarDecl
   89     | SEMICOLON

   90 IfStmt: IF LPARENTHESES Expr RPARENTHESES Stmt ELSE Stmt
   91       | IF LPARENTHESES Expr RPARENTHESES Stmt

   92 SwitchStmt: SWITCH LPARENTHESES Expr RPARENTHESES LBRACE CaseStmtList RBRACE

   93 CaseStmtList: CaseStmtList CaseStmt
   94             | ε

   95 CaseStmt: CASE Expr COLON Stmts
   96         | DEFAULT COLON Stmts

   97 ForStmt: FOR LPARENTHESES Expr SEMICOLON Expr SEMICOLON Expr RPARENTHESES Stmt
   98        | FOR LPARENTHESES SEMICOLON Expr SEMICOLON Expr RPARENTHESES Stmt
   99        | FOR LPARENTHESES VarDecl Expr SEMICOLON Expr RPARENTHESES Stmt

  100 DoStmt: DO Stmt WHILE LPARENTHESES Expr RPARENTHESES SEMICOLON

  101 WhileStmt: WHILE LPARENTHESES Expr RPARENTHESES Stmt

  102 ContinueStmt: CONTINUE SEMICOLON

  103 BreakStmt: BREAK SEMICOLON

  104 ReturnStmt: RETURN SEMICOLON
  105           | RETURN Expr SEMICOLON

  106 Block: LBRACE Stmts RBRACE

  107 Expr: IDENTIFIER
  108     | Constant
  109     | LPARENTHESES Expr RPARENTHESES
  110     | Expr COMMA Expr
  111     | IDENTIFIER LPARENTHESES ExprList RPARENTHESES
  112     | Expr DOT IDENTIFIER
  113     | Expr ARROW IDENTIFIER
  114     | Expr LBRACKET Expr RBRACKET
  115     | LPARENTHESES VarType RPARENTHESES Expr
  116     | SIZEOF LPARENTHESES VarType RPARENTHESES
  117     | SIZEOF LPARENTHESES Expr RPARENTHESES
  118     | SIZEOF LPARENTHESES IDENTIFIER RPARENTHESES
  119     | ADD Expr
  120     | SUB Expr
  121     | ASTERISK Expr
  122     | AMPERSAND Expr
  123     | Expr ASSIGN Expr
  124     | Expr ADD Expr
  125     | Expr SUB Expr
  126     | Expr ASTERISK Expr
  127     | Expr DIV Expr
  128     | Expr MOD Expr
  129     | Expr DADD
  130     | Expr DSUB
  131     | DADD Expr
  132     | DSUB Expr
  133     | Expr ADDEQ Expr
  134     | Expr SUBEQ Expr
  135     | Expr MULEQ Expr
  136     | Expr DIVEQ Expr
  137     | Expr MODEQ Expr
  138     | Expr AMPERSAND Expr
  139     | Expr BOR Expr
  140     | Expr BXOR Expr
  141     | BNOT Expr
  142     | Expr BANDEQ Expr
  143     | Expr BOREQ Expr
  144     | Expr BXOREQ Expr
  145     | Expr SHL Expr
  146     | Expr SHR Expr
  147     | Expr SHLEQ Expr
  148     | Expr SHREQ Expr
  149     | Expr AND Expr
  150     | Expr OR Expr
  151     | NOT Expr
  152     | Expr EQ Expr
  153     | Expr NEQ Expr
  154     | Expr LT Expr
  155     | Expr LE Expr
  156     | Expr GT Expr
  157     | Expr GE Expr
  158     | Expr QUESTION Expr COLON Expr

  159 ExprList: ExprList COMMA Expr
  160         | Expr
  161         | ε

  162 Constant: CHARACTER
  163         | INTEGER
  164         | UINTEGER
  165         | LONGVAL
  166         | ULONGVAL
  167         | FLOATVAL
  168         | DOUBLEVAL
  169         | STRING
  170         | TRUE
  171         | FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    COMMA (258) 27 34 43 44 67 70 110 159
    COLON (259) 95 96 158
    SEMICOLON (260) 8 9 10 11 14 15 65 66 77 89 97 98 99 100 102 103 104 105
    QUESTION (261) 158
    ELLIPSES (262) 44 46
    DOT (263) 112
    ASTERISK (264) 25 121 126
    AMPERSAND (265) 122 138
    ARROW (266) 113
    LPARENTHESES (267) 11 12 90 91 92 97 98 99 100 101 109 111 115 116 117 118
    RPARENTHESES (268) 11 12 90 91 92 97 98 99 100 101 109 111 115 116 117 118
    LBRACKET (269) 41 42 114
    RBRACKET (270) 41 42 114
    LBRACE (271) 9 10 13 19 21 23 32 33 37 92 106
    RBRACE (272) 9 10 13 19 21 23 32 33 37 92 106
    ASSIGN (273) 31 32 33 74 123
    ADD (274) 119 124
    SUB (275) 120 125
    DIV (276) 127
    MOD (277) 128
    DADD (278) 129 131
    DSUB (279) 130 132
    ADDEQ (280) 133
    SUBEQ (281) 134
    MULEQ (282) 135
    DIVEQ (283) 136
    MODEQ (284) 137
    BOR (285) 139
    BXOR (286) 140
    BNOT (287) 141
    BANDEQ (288) 142
    BOREQ (289) 143
    BXOREQ (290) 144
    SHL (291) 145
    SHR (292) 146
    SHLEQ (293) 147
    SHREQ (294) 148
    AND (295) 149
    OR (296) 150
    NOT (297) 151
    EQ (298) 152
    NEQ (299) 153
    GT (300) 156
    GE (301) 157
    LT (302) 154
    LE (303) 155
    CHAR (304) 50 55
    SHORT (305) 51 56
    INT (306) 52 57
    LONG (307) 53 58
    UNSIGNED (308) 54 55 56 57 58
    CONST (309) 17
    VOID (310) 62
    FLOAT (311) 59
    DOUBLE (312) 60
    BOOL (313) 61
    TRUE (314) 170
    FALSE (315) 171
    IF (316) 90 91
    ELSE (317) 90
    SWITCH (318) 92
    CASE (319) 95
    DEFAULT (320) 96
    FOR (321) 97 98 99
    DO (322) 100
    WHILE (323) 100 101
    CONTINUE (324) 102
    BREAK (325) 103
    RETURN (326) 104 105
    STRUCT (327) 9 19 20
    UNION (328) 10 21 22
    ENUM (329) 23 24
    TYPEDEF (330) 8 9 10
    SIZEOF (331) 116 117 118
    IDENTIFIER <idVal> (332) 8 9 10 11 12 19 20 21 22 23 24 26 30 31 32 33 48 67 68 73 74 107 111 112 113 118
    CHARACTER <charVal> (333) 162
    INTEGER <intVal> (334) 41 74 163
    UINTEGER <uintVal> (335) 164
    LONGVAL <longVal> (336) 165
    ULONGVAL <ulongVal> (337) 166
    FLOATVAL <floatVal> (338) 167
    DOUBLEVAL <doubleVal> (339) 168
    STRING <strVal> (340) 169


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    Program <program> (87)
        on left: 1
        on right: 0
    Decls <decls> (88)
        on left: 2 3
        on right: 1 2
    Decl <decl> (89)
        on left: 4 5 6 7
        on right: 2
    TypedefDecl <typedefDecl> (90)
        on left: 8 9 10
        on right: 7
    FuncDecl <funcDecl> (91)
        on left: 11 12
        on right: 4
    FuncBody <funcBody> (92)
        on left: 13
        on right: 12
    VarDecl <varDecl> (93)
        on left: 14
        on right: 5 88 99
    TypeDecl <typeDecl> (94)
        on left: 15
        on right: 6 87
    VarType <varType> (95)
        on left: 16 17
        on right: 8 11 12 14 48 49 65 115 116
    _VarType <varType> (96)
        on left: 18 19 20 21 22 23 24 25 26
        on right: 15 16 17 25
    VarList <varList> (97)
        on left: 27 28 29
        on right: 14 27
    VarInit <varInit> (98)
        on left: 30 31 32 33
        on right: 27 28
    InitList <initList> (99)
        on left: 34 35
        on right: 32 34 37
    InitItem <initElement> (100)
        on left: 36 37
        on right: 34 35
    ArrayBoundList <arrayBoundList> (101)
        on left: 38 39 40
        on right: 30 31 32 33 38
    ArrayBound <sizeVal> (102)
        on left: 41 42
        on right: 38 39
    ParamList <paramList> (103)
        on left: 43 44 45 46 47
        on right: 11 12 43 44
    Param <param> (104)
        on left: 48 49
        on right: 43 45
    BuiltinType <builtinType> (105)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 18
    FieldDecls <fieldDecls> (106)
        on left: 63 64
        on right: 9 10 19 21 63
    FieldDecl <fieldDecl> (107)
        on left: 65 66
        on right: 63
    MemberList <memberList> (108)
        on left: 67 68 69
        on right: 65 67
    EnumList <enumList> (109)
        on left: 70 71 72
        on right: 23 70
    Enum <enumeration> (110)
        on left: 73 74
        on right: 70 71
    Stmts <stmts> (111)
        on left: 75 76
        on right: 13 75 95 96 106
    Stmt <stmt> (112)
        on left: 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 75 90 91 97 98 99 100 101
    IfStmt <ifStmt> (113)
        on left: 90 91
        on right: 78
    SwitchStmt <switchStmt> (114)
        on left: 92
        on right: 79
    CaseStmtList <caseStmtList> (115)
        on left: 93 94
        on right: 92 93
    CaseStmt <caseStmt> (116)
        on left: 95 96
        on right: 93
    ForStmt <forStmt> (117)
        on left: 97 98 99
        on right: 80
    DoStmt <doStmt> (118)
        on left: 100
        on right: 81
    WhileStmt <whileStmt> (119)
        on left: 101
        on right: 82
    ContinueStmt <continueStmt> (120)
        on left: 102
        on right: 83
    BreakStmt <breakStmt> (121)
        on left: 103
        on right: 84
    ReturnStmt <returnStmt> (122)
        on left: 104 105
        on right: 85
    Block <block> (123)
        on left: 106
        on right: 86
    Expr <expr> (124)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158
        on right: 31 36 77 90 91 92 95 97 98 99 100 101 105 109 110 112 113 114 115 117 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160
    ExprList <exprList> (125)
        on left: 159 160 161
        on right: 111 159
    Constant <constant> (126)
        on left: 162 163 164 165 166 167 168 169 170 171
        on right: 108


State 0

    0 $accept: • Program $end

    $default  reduce using rule 3 (Decls)

    Program  go to state 1
    Decls    go to state 2


State 1

    0 $accept: Program • $end

    $end  shift, and go to state 3


State 2

    1 Program: Decls •
    2 Decls: Decls • Decl

    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    CONST       shift, and go to state 9
    VOID        shift, and go to state 10
    FLOAT       shift, and go to state 11
    DOUBLE      shift, and go to state 12
    BOOL        shift, and go to state 13
    STRUCT      shift, and go to state 14
    UNION       shift, and go to state 15
    ENUM        shift, and go to state 16
    TYPEDEF     shift, and go to state 17
    IDENTIFIER  shift, and go to state 18

    $default  reduce using rule 1 (Program)

    Decl         go to state 19
    TypedefDecl  go to state 20
    FuncDecl     go to state 21
    VarDecl      go to state 22
    TypeDecl     go to state 23
    VarType      go to state 24
    _VarType     go to state 25
    BuiltinType  go to state 26


State 3

    0 $accept: Program $end •

    $default  accept


State 4

   50 BuiltinType: CHAR •

    $default  reduce using rule 50 (BuiltinType)


State 5

   51 BuiltinType: SHORT •

    $default  reduce using rule 51 (BuiltinType)


State 6

   52 BuiltinType: INT •

    $default  reduce using rule 52 (BuiltinType)


State 7

   53 BuiltinType: LONG •

    $default  reduce using rule 53 (BuiltinType)


State 8

   54 BuiltinType: UNSIGNED •
   55            | UNSIGNED • CHAR
   56            | UNSIGNED • SHORT
   57            | UNSIGNED • INT
   58            | UNSIGNED • LONG

    CHAR   shift, and go to state 27
    SHORT  shift, and go to state 28
    INT    shift, and go to state 29
    LONG   shift, and go to state 30

    $default  reduce using rule 54 (BuiltinType)


State 9

   17 VarType: CONST • _VarType

    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    VOID        shift, and go to state 10
    FLOAT       shift, and go to state 11
    DOUBLE      shift, and go to state 12
    BOOL        shift, and go to state 13
    STRUCT      shift, and go to state 14
    UNION       shift, and go to state 15
    ENUM        shift, and go to state 16
    IDENTIFIER  shift, and go to state 18

    _VarType     go to state 31
    BuiltinType  go to state 26


State 10

   62 BuiltinType: VOID •

    $default  reduce using rule 62 (BuiltinType)


State 11

   59 BuiltinType: FLOAT •

    $default  reduce using rule 59 (BuiltinType)


State 12

   60 BuiltinType: DOUBLE •

    $default  reduce using rule 60 (BuiltinType)


State 13

   61 BuiltinType: BOOL •

    $default  reduce using rule 61 (BuiltinType)


State 14

   19 _VarType: STRUCT • IDENTIFIER LBRACE FieldDecls RBRACE
   20         | STRUCT • IDENTIFIER

    IDENTIFIER  shift, and go to state 32


State 15

   21 _VarType: UNION • IDENTIFIER LBRACE FieldDecls RBRACE
   22         | UNION • IDENTIFIER

    IDENTIFIER  shift, and go to state 33


State 16

   23 _VarType: ENUM • IDENTIFIER LBRACE EnumList RBRACE
   24         | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 34


State 17

    8 TypedefDecl: TYPEDEF • VarType IDENTIFIER SEMICOLON
    9            | TYPEDEF • STRUCT IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   10            | TYPEDEF • UNION IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON

    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    CONST       shift, and go to state 9
    VOID        shift, and go to state 10
    FLOAT       shift, and go to state 11
    DOUBLE      shift, and go to state 12
    BOOL        shift, and go to state 13
    STRUCT      shift, and go to state 35
    UNION       shift, and go to state 36
    ENUM        shift, and go to state 16
    IDENTIFIER  shift, and go to state 18

    VarType      go to state 37
    _VarType     go to state 38
    BuiltinType  go to state 26


State 18

   26 _VarType: IDENTIFIER •

    $default  reduce using rule 26 (_VarType)


State 19

    2 Decls: Decls Decl •

    $default  reduce using rule 2 (Decls)


State 20

    7 Decl: TypedefDecl •

    $default  reduce using rule 7 (Decl)


State 21

    4 Decl: FuncDecl •

    $default  reduce using rule 4 (Decl)


State 22

    5 Decl: VarDecl •

    $default  reduce using rule 5 (Decl)


State 23

    6 Decl: TypeDecl •

    $default  reduce using rule 6 (Decl)


State 24

   11 FuncDecl: VarType • IDENTIFIER LPARENTHESES ParamList RPARENTHESES SEMICOLON
   12         | VarType • IDENTIFIER LPARENTHESES ParamList RPARENTHESES FuncBody
   14 VarDecl: VarType • VarList SEMICOLON

    IDENTIFIER  shift, and go to state 39

    $default  reduce using rule 29 (VarList)

    VarList  go to state 40
    VarInit  go to state 41


State 25

   15 TypeDecl: _VarType • SEMICOLON
   16 VarType: _VarType •
   25 _VarType: _VarType • ASTERISK

    SEMICOLON  shift, and go to state 42
    ASTERISK   shift, and go to state 43

    SEMICOLON  [reduce using rule 16 (VarType)]
    $default   reduce using rule 16 (VarType)


State 26

   18 _VarType: BuiltinType •

    $default  reduce using rule 18 (_VarType)


State 27

   55 BuiltinType: UNSIGNED CHAR •

    $default  reduce using rule 55 (BuiltinType)


State 28

   56 BuiltinType: UNSIGNED SHORT •

    $default  reduce using rule 56 (BuiltinType)


State 29

   57 BuiltinType: UNSIGNED INT •

    $default  reduce using rule 57 (BuiltinType)


State 30

   58 BuiltinType: UNSIGNED LONG •

    $default  reduce using rule 58 (BuiltinType)


State 31

   17 VarType: CONST _VarType •
   25 _VarType: _VarType • ASTERISK

    ASTERISK  shift, and go to state 43

    $default  reduce using rule 17 (VarType)


State 32

   19 _VarType: STRUCT IDENTIFIER • LBRACE FieldDecls RBRACE
   20         | STRUCT IDENTIFIER •

    LBRACE  shift, and go to state 44

    $default  reduce using rule 20 (_VarType)


State 33

   21 _VarType: UNION IDENTIFIER • LBRACE FieldDecls RBRACE
   22         | UNION IDENTIFIER •

    LBRACE  shift, and go to state 45

    $default  reduce using rule 22 (_VarType)


State 34

   23 _VarType: ENUM IDENTIFIER • LBRACE EnumList RBRACE
   24         | ENUM IDENTIFIER •

    LBRACE  shift, and go to state 46

    $default  reduce using rule 24 (_VarType)


State 35

    9 TypedefDecl: TYPEDEF STRUCT • IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   19 _VarType: STRUCT • IDENTIFIER LBRACE FieldDecls RBRACE
   20         | STRUCT • IDENTIFIER

    IDENTIFIER  shift, and go to state 47


State 36

   10 TypedefDecl: TYPEDEF UNION • IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   21 _VarType: UNION • IDENTIFIER LBRACE FieldDecls RBRACE
   22         | UNION • IDENTIFIER

    IDENTIFIER  shift, and go to state 48


State 37

    8 TypedefDecl: TYPEDEF VarType • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 49


State 38

   16 VarType: _VarType •
   25 _VarType: _VarType • ASTERISK

    ASTERISK  shift, and go to state 43

    $default  reduce using rule 16 (VarType)


State 39

   11 FuncDecl: VarType IDENTIFIER • LPARENTHESES ParamList RPARENTHESES SEMICOLON
   12         | VarType IDENTIFIER • LPARENTHESES ParamList RPARENTHESES FuncBody
   30 VarInit: IDENTIFIER • ArrayBoundList
   31        | IDENTIFIER • ArrayBoundList ASSIGN Expr
   32        | IDENTIFIER • ArrayBoundList ASSIGN LBRACE InitList RBRACE
   33        | IDENTIFIER • ArrayBoundList ASSIGN LBRACE RBRACE

    LPARENTHESES  shift, and go to state 50
    LBRACKET      shift, and go to state 51

    LBRACKET  [reduce using rule 40 (ArrayBoundList)]
    $default  reduce using rule 40 (ArrayBoundList)

    ArrayBoundList  go to state 52
    ArrayBound      go to state 53


State 40

   14 VarDecl: VarType VarList • SEMICOLON
   27 VarList: VarList • COMMA VarInit

    COMMA      shift, and go to state 54
    SEMICOLON  shift, and go to state 55


State 41

   28 VarList: VarInit •

    $default  reduce using rule 28 (VarList)


State 42

   15 TypeDecl: _VarType SEMICOLON •

    $default  reduce using rule 15 (TypeDecl)


State 43

   25 _VarType: _VarType ASTERISK •

    $default  reduce using rule 25 (_VarType)


State 44

   19 _VarType: STRUCT IDENTIFIER LBRACE • FieldDecls RBRACE

    $default  reduce using rule 64 (FieldDecls)

    FieldDecls  go to state 56


State 45

   21 _VarType: UNION IDENTIFIER LBRACE • FieldDecls RBRACE

    $default  reduce using rule 64 (FieldDecls)

    FieldDecls  go to state 57


State 46

   23 _VarType: ENUM IDENTIFIER LBRACE • EnumList RBRACE

    IDENTIFIER  shift, and go to state 58

    $default  reduce using rule 72 (EnumList)

    EnumList  go to state 59
    Enum      go to state 60


State 47

    9 TypedefDecl: TYPEDEF STRUCT IDENTIFIER • LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   19 _VarType: STRUCT IDENTIFIER • LBRACE FieldDecls RBRACE
   20         | STRUCT IDENTIFIER •

    LBRACE  shift, and go to state 61

    $default  reduce using rule 20 (_VarType)


State 48

   10 TypedefDecl: TYPEDEF UNION IDENTIFIER • LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   21 _VarType: UNION IDENTIFIER • LBRACE FieldDecls RBRACE
   22         | UNION IDENTIFIER •

    LBRACE  shift, and go to state 62

    $default  reduce using rule 22 (_VarType)


State 49

    8 TypedefDecl: TYPEDEF VarType IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 63


State 50

   11 FuncDecl: VarType IDENTIFIER LPARENTHESES • ParamList RPARENTHESES SEMICOLON
   12         | VarType IDENTIFIER LPARENTHESES • ParamList RPARENTHESES FuncBody

    ELLIPSES    shift, and go to state 64
    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    CONST       shift, and go to state 9
    VOID        shift, and go to state 10
    FLOAT       shift, and go to state 11
    DOUBLE      shift, and go to state 12
    BOOL        shift, and go to state 13
    STRUCT      shift, and go to state 14
    UNION       shift, and go to state 15
    ENUM        shift, and go to state 16
    IDENTIFIER  shift, and go to state 18

    $default  reduce using rule 47 (ParamList)

    VarType      go to state 65
    _VarType     go to state 38
    ParamList    go to state 66
    Param        go to state 67
    BuiltinType  go to state 26


State 51

   41 ArrayBound: LBRACKET • INTEGER RBRACKET
   42           | LBRACKET • RBRACKET

    RBRACKET  shift, and go to state 68
    INTEGER   shift, and go to state 69


State 52

   30 VarInit: IDENTIFIER ArrayBoundList •
   31        | IDENTIFIER ArrayBoundList • ASSIGN Expr
   32        | IDENTIFIER ArrayBoundList • ASSIGN LBRACE InitList RBRACE
   33        | IDENTIFIER ArrayBoundList • ASSIGN LBRACE RBRACE
   38 ArrayBoundList: ArrayBoundList • ArrayBound

    LBRACKET  shift, and go to state 51
    ASSIGN    shift, and go to state 70

    $default  reduce using rule 30 (VarInit)

    ArrayBound  go to state 71


State 53

   39 ArrayBoundList: ArrayBound •

    $default  reduce using rule 39 (ArrayBoundList)


State 54

   27 VarList: VarList COMMA • VarInit

    IDENTIFIER  shift, and go to state 72

    VarInit  go to state 73


State 55

   14 VarDecl: VarType VarList SEMICOLON •

    $default  reduce using rule 14 (VarDecl)


State 56

   19 _VarType: STRUCT IDENTIFIER LBRACE FieldDecls • RBRACE
   63 FieldDecls: FieldDecls • FieldDecl

    SEMICOLON   shift, and go to state 74
    RBRACE      shift, and go to state 75
    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    CONST       shift, and go to state 9
    VOID        shift, and go to state 10
    FLOAT       shift, and go to state 11
    DOUBLE      shift, and go to state 12
    BOOL        shift, and go to state 13
    STRUCT      shift, and go to state 14
    UNION       shift, and go to state 15
    ENUM        shift, and go to state 16
    IDENTIFIER  shift, and go to state 18

    VarType      go to state 76
    _VarType     go to state 38
    BuiltinType  go to state 26
    FieldDecl    go to state 77


State 57

   21 _VarType: UNION IDENTIFIER LBRACE FieldDecls • RBRACE
   63 FieldDecls: FieldDecls • FieldDecl

    SEMICOLON   shift, and go to state 74
    RBRACE      shift, and go to state 78
    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    CONST       shift, and go to state 9
    VOID        shift, and go to state 10
    FLOAT       shift, and go to state 11
    DOUBLE      shift, and go to state 12
    BOOL        shift, and go to state 13
    STRUCT      shift, and go to state 14
    UNION       shift, and go to state 15
    ENUM        shift, and go to state 16
    IDENTIFIER  shift, and go to state 18

    VarType      go to state 76
    _VarType     go to state 38
    BuiltinType  go to state 26
    FieldDecl    go to state 77


State 58

   73 Enum: IDENTIFIER •
   74     | IDENTIFIER • ASSIGN INTEGER

    ASSIGN  shift, and go to state 79

    $default  reduce using rule 73 (Enum)


State 59

   23 _VarType: ENUM IDENTIFIER LBRACE EnumList • RBRACE
   70 EnumList: EnumList • COMMA Enum

    COMMA   shift, and go to state 80
    RBRACE  shift, and go to state 81


State 60

   71 EnumList: Enum •

    $default  reduce using rule 71 (EnumList)


State 61

    9 TypedefDecl: TYPEDEF STRUCT IDENTIFIER LBRACE • FieldDecls RBRACE IDENTIFIER SEMICOLON
   19 _VarType: STRUCT IDENTIFIER LBRACE • FieldDecls RBRACE

    $default  reduce using rule 64 (FieldDecls)

    FieldDecls  go to state 82


State 62

   10 TypedefDecl: TYPEDEF UNION IDENTIFIER LBRACE • FieldDecls RBRACE IDENTIFIER SEMICOLON
   21 _VarType: UNION IDENTIFIER LBRACE • FieldDecls RBRACE

    $default  reduce using rule 64 (FieldDecls)

    FieldDecls  go to state 83


State 63

    8 TypedefDecl: TYPEDEF VarType IDENTIFIER SEMICOLON •

    $default  reduce using rule 8 (TypedefDecl)


State 64

   46 ParamList: ELLIPSES •

    $default  reduce using rule 46 (ParamList)


State 65

   48 Param: VarType • IDENTIFIER
   49      | VarType •

    IDENTIFIER  shift, and go to state 84

    $default  reduce using rule 49 (Param)


State 66

   11 FuncDecl: VarType IDENTIFIER LPARENTHESES ParamList • RPARENTHESES SEMICOLON
   12         | VarType IDENTIFIER LPARENTHESES ParamList • RPARENTHESES FuncBody
   43 ParamList: ParamList • COMMA Param
   44          | ParamList • COMMA ELLIPSES

    COMMA         shift, and go to state 85
    RPARENTHESES  shift, and go to state 86


State 67

   45 ParamList: Param •

    $default  reduce using rule 45 (ParamList)


State 68

   42 ArrayBound: LBRACKET RBRACKET •

    $default  reduce using rule 42 (ArrayBound)


State 69

   41 ArrayBound: LBRACKET INTEGER • RBRACKET

    RBRACKET  shift, and go to state 87


State 70

   31 VarInit: IDENTIFIER ArrayBoundList ASSIGN • Expr
   32        | IDENTIFIER ArrayBoundList ASSIGN • LBRACE InitList RBRACE
   33        | IDENTIFIER ArrayBoundList ASSIGN • LBRACE RBRACE
